<resources>
    <string name="app_name">Provenance</string>
    <string name="log_in">Log In</string>
    <string name="archival_description">Archival Description</string>
    <string name="enter_collection_to_add_to_your_images">Enter collection information to add to your images.</string>
    <string name="repository_name">*Repository Name</string>
    <string name="collection_title">*Collection</string>
    <string name="box">Box</string>
    <string name="folder">Folder</string>
    <string name="other_container_type">Other container type</string>
    <string name="container_description">Container Description</string>
    <string name="tags">Tags</string>
    <string name="next">Next</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="camera_image">camera image</string>
    <string name="home_image">home image</string>
    <string name="upload_documents_button">upload documents button</string>
    <string name="your_documents">Your documents</string>
    <string name="upload">Upload</string>
    <string name="archival_document_image">archival document image</string>
    <string name="edit_pencil_icon">edit pencil icon</string>
    <string name="details">Details</string>
    <string name="repository">Repository:</string>
    <string name="collection">Collection:</string>
    <string name="located_in">Located in:</string>
    <string name="description">Description:</string>
    <string name="citation">Citation:</string>
    <string name="tags2">Tags:</string>
    <string name="edit_item">Edit Item</string>
    <string name="box2">Box:</string>
    <string name="folder2">Folder:</string>
    <string name="other_container">Other container:</string>
    <string name="update">Update</string>
    <string name="item_description">Item description:</string>
    <string name="date">Date:</string>
    <string name="_1900">1900</string>
    <string name="repository_colon">*Repository:</string>
    <string name="repository_name2">repository name</string>
    <string name="tags_ex">Ex: paintings; Frida biography; postcolonialism</string>
    <string name="item_description2">Item description</string>
    <string name="collection_title2">collection title</string>
    <string name="date_ex">YYYY or YYYY Month DD</string>
    <string name="folder_number">folder number</string>
    <string name="box_number">box number</string>
    <string name="container_desc_ex">container type and name</string>
    <string name="collection2">*Collection:</string>
    <string name="description2">Description:</string>
    <string name="certificate_image">certificate image</string>
    <string name="sketch_of_edgar_allan_poe">sketch of Edgar Allan Poe</string>
    <string name="letter_from_edgar_allan_poe">letter from Edgar Allan Poe</string>
    <string name="photograph_of_frida_kahlo_and_diego_rivera">photograph of Frida Kahlo and Diego Rivera</string>
    <string name="search">Search</string>
</resources>
